mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41196311-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank: ~
  hgvs_g: g.41196311G>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
