mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41196312-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41196312G>C
  hgvs_n: n.7088A>G
  hgvs_c: c.*1383A>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7088
    total: 7088
  cds_pos:
    ord: 1383
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196312G>C
  hgvs_n: n.7028A>G
  hgvs_c: c.*1383A>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7028
    total: 7028
  cds_pos:
    ord: 1383
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196312G>C
  hgvs_n: n.3682A>G
  hgvs_c: c.*1383A>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3682
    total: 3682
  cds_pos:
    ord: 1383
    total: 2280
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196312G>C
  hgvs_n: n.3696A>G
  hgvs_c: c.*1489A>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3696
    total: 3696
  cds_pos:
    ord: 1489
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41196312G>C
  hgvs_n: n.7151A>G
  hgvs_c: c.*1383A>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7151
    total: 7151
  cds_pos:
    ord: 1383
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - non_coding_transcript_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41196312G>C
  hgvs_n: n.7152A>G
  hgvs_c: n.7152A>G
  hgvs_p: ~
  cdna_pos:
    ord: 7152
    total: 7152
  cds_pos: ~
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
