mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41197701-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197701G>C
  hgvs_n: n.5699C>G
  hgvs_c: c.5586C>G
  hgvs_p: p.His1862Gln
  cdna_pos:
    ord: 5699
    total: 7088
  cds_pos:
    ord: 5586
    total: 5592
  protein_pos:
    ord: 1862
    total: 1863
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197701G>C
  hgvs_n: n.5639C>G
  hgvs_c: c.5445C>G
  hgvs_p: p.His1815Gln
  cdna_pos:
    ord: 5639
    total: 7028
  cds_pos:
    ord: 5445
    total: 5451
  protein_pos:
    ord: 1815
    total: 1816
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197701G>C
  hgvs_n: n.2293C>G
  hgvs_c: c.2274C>G
  hgvs_p: p.His758Gln
  cdna_pos:
    ord: 2293
    total: 3682
  cds_pos:
    ord: 2274
    total: 2280
  protein_pos:
    ord: 758
    total: 759
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197701G>C
  hgvs_n: n.2307C>G
  hgvs_c: c.*100C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 2307
    total: 3696
  cds_pos:
    ord: 100
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41197701G>C
  hgvs_n: n.5762C>G
  hgvs_c: c.5649C>G
  hgvs_p: p.His1883Gln
  cdna_pos:
    ord: 5762
    total: 7151
  cds_pos:
    ord: 5649
    total: 5655
  protein_pos:
    ord: 1883
    total: 1884
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - non_coding_transcript_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197701G>C
  hgvs_n: n.5763C>G
  hgvs_c: n.5763C>G
  hgvs_p: ~
  cdna_pos:
    ord: 5763
    total: 7152
  cds_pos: ~
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
