mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41197818-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197818G>C
  hgvs_n: n.5582A>G
  hgvs_c: c.5469A>G
  hgvs_p: p.Ala1823=
  cdna_pos:
    ord: 5582
    total: 7088
  cds_pos:
    ord: 5469
    total: 5592
  protein_pos:
    ord: 1823
    total: 1863
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197818G>C
  hgvs_n: n.5522A>G
  hgvs_c: c.5328A>G
  hgvs_p: p.Ala1776=
  cdna_pos:
    ord: 5522
    total: 7028
  cds_pos:
    ord: 5328
    total: 5451
  protein_pos:
    ord: 1776
    total: 1816
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197818G>C
  hgvs_n: n.2176A>G
  hgvs_c: c.2157A>G
  hgvs_p: p.Ala719=
  cdna_pos:
    ord: 2176
    total: 3682
  cds_pos:
    ord: 2157
    total: 2280
  protein_pos:
    ord: 719
    total: 759
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197818G>C
  hgvs_n: n.2190A>G
  hgvs_c: c.2083A>G
  hgvs_p: p.Asn695Asp
  cdna_pos:
    ord: 2190
    total: 3696
  cds_pos:
    ord: 2083
    total: 2100
  protein_pos:
    ord: 695
    total: 699
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41197818G>C
  hgvs_n: n.5645A>G
  hgvs_c: c.5532A>G
  hgvs_p: p.Ala1844=
  cdna_pos:
    ord: 5645
    total: 7151
  cds_pos:
    ord: 5532
    total: 5655
  protein_pos:
    ord: 1844
    total: 1884
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - non_coding_transcript_exon_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197818G>C
  hgvs_n: n.5646A>G
  hgvs_c: n.5646A>G
  hgvs_p: ~
  cdna_pos:
    ord: 5646
    total: 7152
  cds_pos: ~
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
