mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41197819-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197819G>C
  hgvs_n: n.5581C>G
  hgvs_c: c.5468C>G
  hgvs_p: p.Ala1823Gly
  cdna_pos:
    ord: 5581
    total: 7088
  cds_pos:
    ord: 5468
    total: 5592
  protein_pos:
    ord: 1823
    total: 1863
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_n: n.5521C>G
  hgvs_c: c.5327C>G
  hgvs_p: p.Ala1776Gly
  cdna_pos:
    ord: 5521
    total: 7028
  cds_pos:
    ord: 5327
    total: 5451
  protein_pos:
    ord: 1776
    total: 1816
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_n: n.2175C>G
  hgvs_c: c.2156C>G
  hgvs_p: p.Ala719Gly
  cdna_pos:
    ord: 2175
    total: 3682
  cds_pos:
    ord: 2156
    total: 2280
  protein_pos:
    ord: 719
    total: 759
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_n: n.2189C>G
  hgvs_c: c.2082C>G
  hgvs_p: p.Cys694Trp
  cdna_pos:
    ord: 2189
    total: 3696
  cds_pos:
    ord: 2082
    total: 2100
  protein_pos:
    ord: 694
    total: 699
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41197819G>C
  hgvs_n: n.5644C>G
  hgvs_c: c.5531C>G
  hgvs_p: p.Ala1844Gly
  cdna_pos:
    ord: 5644
    total: 7151
  cds_pos:
    ord: 5531
    total: 5655
  protein_pos:
    ord: 1844
    total: 1884
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - exonic_splice_region_variant
    - non_coding_transcript_exon_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197819G>C
  hgvs_n: n.5645C>G
  hgvs_c: n.5645C>G
  hgvs_p: ~
  cdna_pos:
    ord: 5645
    total: 7152
  cds_pos: ~
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
