mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41197821-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197821G>C
  hgvs_n: n.5581-2C>G
  hgvs_c: c.5468-2C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197821G>C
  hgvs_n: n.5521-2C>G
  hgvs_c: c.5327-2C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197821G>C
  hgvs_n: n.2175-2C>G
  hgvs_c: c.2156-2C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197821G>C
  hgvs_n: n.2189-2C>G
  hgvs_c: c.2082-2C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197821G>C
  hgvs_n: n.5644-2C>G
  hgvs_c: c.5531-2C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - non_coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197821G>C
  hgvs_n: n.5645-2C>G
  hgvs_c: n.5645-2C>G
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  strand: -1
  messages: ~
