mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_brca1_one_variant@17-41197822-G-C.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197822G>C
  hgvs_n: n.5581-3C>G
  hgvs_c: c.5468-3C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197822G>C
  hgvs_n: n.5521-3C>G
  hgvs_c: c.5327-3C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197822G>C
  hgvs_n: n.2175-3C>G
  hgvs_c: c.2156-3C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197822G>C
  hgvs_n: n.2189-3C>G
  hgvs_c: c.2082-3C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197822G>C
  hgvs_n: n.5644-3C>G
  hgvs_c: c.5531-3C>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - splice_polypyrimidine_tract_variant
    - non_coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197822G>C
  hgvs_n: n.5645-3C>G
  hgvs_c: n.5645-3C>G
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: -1
  messages: ~
